# playground-pipeline-docker

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  clean-psql-data.sh  docker-compose.yml  pyproject.toml  requirements.txt
data/warehouse/bronze/: albums.json
src/: api.py  client.py  db.py  logger.py  main.py  pipeline.py  session.py
